# swpp202101-team2

./: .gitignore  Makefile.template  README.md  configure.sh  run-benchmark-test.sh  run-filechecks.sh
.github/workflows/: main.yml
filechecks/: Alloca2RegPass_Test1.ll  Alloca2RegPass_Test2.ll  ArithmeticPass_Test1.ll  ArithmeticPass_Test2.ll  CondBranchDeflationPass_Test1.ll  CondBranchDeflationPass_Test2.ll  ExtractFromLoopPass_Test1.ll  ExtractFromLoopPass_Test2.ll  IROutliner_Test1.ll  LoopUnrollPass_Test1.ll  LoopUnrollPass_Test2.ll  LoopUnrollPass_Test3.ll  Malloc2DynAllocaPass_Test1.ll  README.md  ScaleToInt64Pass_Test1.ll  ScaleToInt64Pass_Test2.ll  SetIsNoInlinePass_Test1.ll  VectorizePass_Test1.ll  VectorizePass_Test2.ll  VectorizePass_Test3.ll  VectorizePass_Test4.ll  VectorizePass_Test5.ll  arithmetic.ll  arithmetic_Test1.ll  condbranchdeflation.ll  condbranchdeflation_Test1.ll  dynalloca.ll
src/backend/: AssemblyEmitter.cpp  Backend.cpp  Backend.h  GEPUnpack.cpp  RegisterSpill.cpp  TargetMachine.cpp
src/core/: main.cpp
src/team2_pass/: AddNoRecurseAttrs.cpp  AddNoRecurseAttrs.h  Alloca2RegPass.cpp  Alloca2RegPass.h  ArithmeticPass.cpp  ArithmeticPass.h  (+26 more)
swpp202101-benchmarks/: .gitignore  README.md  build-irgen.sh  c-to-ll.sh  irgen.cpp  run.sh
swpp202101-interpreter/: .gitignore  CMakeLists.txt  README.md  build.sh
swpp202101-interpreter/src/: function.cpp  function.h  main.cpp  memory.cpp  memory.h  opcode.h  parser.cpp  program.cpp  program.h  reg.h  regfile.cpp  size.cpp  size.h  state.cpp  state.h  stmt.cpp  stmt.h  value.cpp  value.h
(+116 files in other folders)
